syntax = "proto3";

package banking;

message CreateUserRequest {
  
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
  string phone_number = 5;
}

message CreateUserResponse {
  bool success = 1;
  string message = 2;
}

message DepositRequest {
  string user_id = 1;
  double amount = 2;
}

message DepositResponse {
  bool success = 1;
  string message = 2;
  double new_balance = 3;
}

message WithdrawRequest {
  string user_id = 1;
  double amount = 2;
}

message WithdrawResponse {
  bool success = 1;
  string message = 2;
  double new_balance = 3;
}

message GetBalanceRequest {
  string user_id = 1;
}

message GetBalanceResponse {
  bool success = 1;
  string message = 2;
  double balance = 3;
}

message SendRequest {
  string from_user_id = 1;
  string to_user_id = 2;
  double amount = 3;
}

message SendResponse {
  bool success = 1;
  string message = 2;
  double from_user_new_balance = 3;
  double to_user_new_balance = 4;
}

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc Deposit (DepositRequest) returns (DepositResponse);
  rpc Withdraw (WithdrawRequest) returns (WithdrawResponse);
  rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse);
  rpc Send (SendRequest) returns (SendResponse);
}
